# rf24server

./: .gitignore  .pseudocode.main.cpp.md  CMakeLists.txt  LICENSE  Makefile  README.md
include/: drone.hpp  packets.hpp  printSet.hpp  radio.hpp  server.hpp
src/: drone.cpp  main.cpp  radio.cpp
